# adw_pydemo

./: .gitignore  Readme.md  adwpydemo.in  dk.rasmil.AdwPyDemo.yml  local.sh  meson.build  run-flat.sh
adwpydemo/: application.py  const.py  functions.py  window.py
data/: adwpydemo.gresource.xml  meson.build
data/css/: main.css
data/gtk/: help-overlay.ui
data/ui/: appmenu.ui  main.ui  mainwindow.ui
